[package]
name = "rocket-console"
version = "0.1.0"
authors = ["Aurelien Montmejat <aurelien.montmejat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"

[dependencies.askama]
version = "0.9"
features = ["with-rocket"]